--- a/web-client/index.html
+++ b/web-client/index.html
@@ -16,6 +16,8 @@
       padding: 0;
       font-family: sans-serif;
       background: linear-gradient(#76A789, #93B289, #709470, #569992, #245A66, #000000);
+      background-repeat: no-repeat;
+      background-color: #000000;
     }
   </style>
   <title>✨Tattered Veil Webthing✨</title>
